--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "eleventy:default": "npx eleventy",
     "eleventy:watch": "npx eleventy --watch",
     "styles:prod": "node-sass src/styles/ --output dist/styles/ && postcss ./dist/styles/*.css --replace",
-    "styles:dev": "node-sass src/styles/ --output dist/styles/ --source-map true --source-map-contents true && postcss ./dist/styles/*.css --replace",
+    "styles:dev": "node-sass src/styles/ --output dist/styles/",
     "scripts:prod": "esbuild --bundle src/scripts/*.ts --outdir=dist/scripts --minify",
-    "scripts:dev": "esbuild --bundle src/scripts/*.ts --outdir=dist/scripts --minify --sourcemap",
+    "scripts:dev": "esbuild --bundle src/scripts/*.ts --outdir=dist/scripts",
     "serve": "light-server -c .lightserverrc",
     "dev": "npm-run-all clean styles:dev scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
     "dev:debug": "DEBUG=* npm run dev",
@@ -36,8 +36,11 @@
     "autoprefixer": "^9.6.5",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
+    "immer": "^6.0.9",
+    "lighterhtml": "^3.1.3",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3"
+    "postcss-cli": "^6.1.3",
+    "queue-microtask": "^1.1.2"
   }
 }
