--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
-    "queue-microtask": "^1.1.2"
+    "queue-microtask": "^1.1.2",
+    "typewriter-effect": "^2.13.1"
   }
 }
