--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^0.9.0",
-    "acorn": "^7.0.0",
+    "acorn": "^7.4.0",
+    "atomically": "^1.3.2",
     "autoprefixer": "^9.6.5",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
+    "fast-glob": "^3.2.4",
     "immer": "^6.0.9",
     "lighterhtml": "^3.1.3",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "queue-microtask": "^1.1.2",
